--- a/packages/varlet-ui/src/table/table.less
+++ b/packages/varlet-ui/src/table/table.less
@@ -61,6 +61,7 @@
 
           &:hover {
             background: var(--table-tbody-tr-hover-background);
+            transition: background-color 0.25s;
           }
 
           &:not(:last-child) {
